force-app/main/default/objects/CustomObjectA__c/CustomObjectA__c.object-meta.xml
<CustomObject>
    <label>カスタムオブジェクトA</label>
    <nameField>
        <label>カスタムオブジェクトA名</label>
        <type>Text</type>
    </nameField>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>