force-app/main/default/objects/CustomObjectA__c/fields/Field_No__c.field-meta.xml
<CustomField>
    <fullName>Field_No__c</fullName>
    <label>連番</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>