force-app/main/default/objects/CustomObjectA__c/fields/Field_Number__c.field-meta.xml
<CustomField>
    <fullName>Field_Number__c</fullName>
    <label>数字入力項目</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>