force-app/main/default/objects/CustomObjectA__c/fields/Field_picklist__c.field-meta.xml
<CustomField>
    <fullName>Field_picklist__c</fullName>
    <label>単一選択リスト</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Type-1</fullName>
            </value>
            <value>
                <fullName>Type-2</fullName>
            </value>
            <value>
                <fullName>Type-3</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>